tests/expectations/compiler/array/array_bounds_fail.out
Error [ESAZ0374010]: Array index 8 out of bounds (array length is 8).
    --> compiler-test:5:17
     |
   5 |             x = a[i];
     |                 ^^^^
